getting set up to create time series county level data

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,27 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'000'"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(row[\"COUNTY\"]).zfill(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +142,7 @@
        "Name: fips, Length: 3193, dtype: int64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,29 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf_USCounties[\"GEOID\"] = gdf_USCounties[\"GEOID\"].astype(\"int\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +180,7 @@
        "3193"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +200,7 @@
        "3233"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +309,7 @@
        "855   POLYGON ((-86.74919 33.99760, -86.74902 33.997...  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +347,7 @@
        "3193"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +367,7 @@
        "3142"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,16 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x225ab9d3988>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x176cde9e948>"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -450,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,29 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_nytCountyData[\"fips\"] = df_nytCountyData[\"fips\"].astype(\"int\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +526,7 @@
        "4  2020-01-24  Snohomish  Washington  53061      1       0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -613,6 +567,7 @@
        "      <th>NAME</th>\n",
        "      <th>NAMELSAD</th>\n",
        "      <th>geometry</th>\n",
+       "      <th>POPESTIMATE2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -624,6 +579,7 @@
        "      <td>Cuming</td>\n",
        "      <td>Cuming County</td>\n",
        "      <td>POLYGON ((-97.01952 42.00410, -97.01952 42.004...</td>\n",
+       "      <td>8846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -633,6 +589,7 @@
        "      <td>Wahkiakum</td>\n",
        "      <td>Wahkiakum County</td>\n",
        "      <td>POLYGON ((-123.43639 46.23820, -123.44759 46.2...</td>\n",
+       "      <td>4488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -642,6 +599,7 @@
        "      <td>De Baca</td>\n",
        "      <td>De Baca County</td>\n",
        "      <td>POLYGON ((-104.56739 33.99757, -104.56772 33.9...</td>\n",
+       "      <td>1748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -651,6 +609,7 @@
        "      <td>Lancaster</td>\n",
        "      <td>Lancaster County</td>\n",
        "      <td>POLYGON ((-96.91060 40.95841, -96.91060 40.958...</td>\n",
+       "      <td>319090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -660,6 +619,7 @@
        "      <td>Nuckolls</td>\n",
        "      <td>Nuckolls County</td>\n",
        "      <td>POLYGON ((-98.27367 40.08940, -98.27367 40.089...</td>\n",
+       "      <td>4148</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -673,15 +633,15 @@
        "3      31      109  31109  Lancaster  Lancaster County   \n",
        "4      31      129  31129   Nuckolls   Nuckolls County   \n",
        "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-97.01952 42.00410, -97.01952 42.004...  \n",
-       "1  POLYGON ((-123.43639 46.23820, -123.44759 46.2...  \n",
-       "2  POLYGON ((-104.56739 33.99757, -104.56772 33.9...  \n",
-       "3  POLYGON ((-96.91060 40.95841, -96.91060 40.958...  \n",
-       "4  POLYGON ((-98.27367 40.08940, -98.27367 40.089...  "
+       "                                            geometry  POPESTIMATE2019  \n",
+       "0  POLYGON ((-97.01952 42.00410, -97.01952 42.004...             8846  \n",
+       "1  POLYGON ((-123.43639 46.23820, -123.44759 46.2...             4488  \n",
+       "2  POLYGON ((-104.56739 33.99757, -104.56772 33.9...             1748  \n",
+       "3  POLYGON ((-96.91060 40.95841, -96.91060 40.958...           319090  \n",
+       "4  POLYGON ((-98.27367 40.08940, -98.27367 40.089...             4148  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -746,6 +706,7 @@
        "      <th>NAME</th>\n",
        "      <th>NAMELSAD</th>\n",
        "      <th>geometry</th>\n",
+       "      <th>POPESTIMATE2019</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -763,6 +724,7 @@
        "      <td>Snohomish</td>\n",
        "      <td>Snohomish County</td>\n",
        "      <td>POLYGON ((-122.34309 48.03653, -122.34086 48.0...</td>\n",
+       "      <td>822083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -778,6 +740,7 @@
        "      <td>Snohomish</td>\n",
        "      <td>Snohomish County</td>\n",
        "      <td>POLYGON ((-122.34309 48.03653, -122.34086 48.0...</td>\n",
+       "      <td>822083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -793,6 +756,7 @@
        "      <td>Snohomish</td>\n",
        "      <td>Snohomish County</td>\n",
        "      <td>POLYGON ((-122.34309 48.03653, -122.34086 48.0...</td>\n",
+       "      <td>822083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -808,6 +772,7 @@
        "      <td>Snohomish</td>\n",
        "      <td>Snohomish County</td>\n",
        "      <td>POLYGON ((-122.34309 48.03653, -122.34086 48.0...</td>\n",
+       "      <td>822083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -823,6 +788,7 @@
        "      <td>Snohomish</td>\n",
        "      <td>Snohomish County</td>\n",
        "      <td>POLYGON ((-122.34309 48.03653, -122.34086 48.0...</td>\n",
+       "      <td>822083</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -843,15 +809,15 @@
        "3  53061  Snohomish  Snohomish County   \n",
        "4  53061  Snohomish  Snohomish County   \n",
        "\n",
-       "                                            geometry  \n",
-       "0  POLYGON ((-122.34309 48.03653, -122.34086 48.0...  \n",
-       "1  POLYGON ((-122.34309 48.03653, -122.34086 48.0...  \n",
-       "2  POLYGON ((-122.34309 48.03653, -122.34086 48.0...  \n",
-       "3  POLYGON ((-122.34309 48.03653, -122.34086 48.0...  \n",
-       "4  POLYGON ((-122.34309 48.03653, -122.34086 48.0...  "
+       "                                            geometry  POPESTIMATE2019  \n",
+       "0  POLYGON ((-122.34309 48.03653, -122.34086 48.0...           822083  \n",
+       "1  POLYGON ((-122.34309 48.03653, -122.34086 48.0...           822083  \n",
+       "2  POLYGON ((-122.34309 48.03653, -122.34086 48.0...           822083  \n",
+       "3  POLYGON ((-122.34309 48.03653, -122.34086 48.0...           822083  \n",
+       "4  POLYGON ((-122.34309 48.03653, -122.34086 48.0...           822083  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +860,7 @@
        "Text(0.5, 1, 'Number of confirmed COVID-19 Cases, 29 March 2020')"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -922,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,33 +902,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'init': 'epsg:4269'}"
-      ]
-     },
-     "execution_count": 236,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gdf_USStates.crs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6acdd6b1135445fafee6e6e9b98de45",
+       "model_id": "430160ce52c0484fb444c1719f7b651b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -979,7 +925,7 @@
        "<function __main__.plotController(month=3, day=1, year=2020)>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,22 +978,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\garfink2\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_MostRecentJHU = df_MostRecentJHU.dropna(subset=[\"FIPS\"])\n",
     "df_MostRecentJHU[\"FIPS\"] = df_MostRecentJHU[\"FIPS\"].astype(\"int\")"
@@ -1055,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1129,7 @@
        "4                Adair, Iowa, US  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
