upped the maximum columns to display

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -52,6 +52,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_columns = 999"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
