ready to convert to cumulative

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,33 @@
        "      <th>FIPS_x</th>\n",
        "      <th>2020-03-22 Confirmed</th>\n",
        "      <th>2020-03-22 Deaths</th>\n",
-       "      <th>...</th>\n",
+       "      <th>2020-03-22 Recovered</th>\n",
+       "      <th>FIPS_y</th>\n",
+       "      <th>2020-03-23 Confirmed</th>\n",
+       "      <th>2020-03-23 Deaths</th>\n",
+       "      <th>2020-03-23 Recovered</th>\n",
+       "      <th>FIPS_x</th>\n",
+       "      <th>2020-03-24 Confirmed</th>\n",
+       "      <th>2020-03-24 Deaths</th>\n",
+       "      <th>2020-03-24 Recovered</th>\n",
+       "      <th>FIPS_y</th>\n",
+       "      <th>2020-03-25 Confirmed</th>\n",
+       "      <th>2020-03-25 Deaths</th>\n",
+       "      <th>2020-03-25 Recovered</th>\n",
+       "      <th>FIPS_x</th>\n",
+       "      <th>2020-03-26 Confirmed</th>\n",
+       "      <th>2020-03-26 Deaths</th>\n",
+       "      <th>2020-03-26 Recovered</th>\n",
+       "      <th>FIPS_y</th>\n",
+       "      <th>2020-03-27 Confirmed</th>\n",
+       "      <th>2020-03-27 Deaths</th>\n",
+       "      <th>2020-03-27 Recovered</th>\n",
+       "      <th>FIPS_x</th>\n",
+       "      <th>2020-03-28 Confirmed</th>\n",
+       "      <th>2020-03-28 Deaths</th>\n",
+       "      <th>2020-03-28 Recovered</th>\n",
+       "      <th>FIPS_y</th>\n",
+       "      <th>2020-03-29 Confirmed</th>\n",
        "      <th>2020-03-29 Deaths</th>\n",
        "      <th>2020-03-29 Recovered</th>\n",
        "      <th>FIPS_x</th>\n",
@@ -1455,7 +1481,33 @@
        "      <td>31109</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31109</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>31109</td>\n",
@@ -1479,7 +1531,33 @@
        "      <td>46099</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46099</td>\n",
+       "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>46099</td>\n",
@@ -1503,7 +1581,33 @@
        "      <td>39063</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39063</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>39063</td>\n",
@@ -1527,7 +1631,33 @@
        "      <td>48189</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48189</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>48189</td>\n",
@@ -1551,7 +1681,33 @@
        "      <td>1027</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1027</td>\n",
@@ -1565,7 +1721,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1583,38 +1738,78 @@
        "3  POLYGON ((-102.08763 34.02656, -102.08779 34.0...            33406   48189   \n",
        "4  POLYGON ((-85.97879 33.32757, -85.97876 33.328...            13235    1027   \n",
        "\n",
-       "   2020-03-22 Confirmed  2020-03-22 Deaths  ...  2020-03-29 Deaths  \\\n",
-       "0                     2                  0  ...                  0   \n",
-       "1                     5                  0  ...                  0   \n",
-       "2                     1                  0  ...                  0   \n",
-       "3                     0                  0  ...                  0   \n",
-       "4                     0                  0  ...                  0   \n",
+       "   2020-03-22 Confirmed  2020-03-22 Deaths  2020-03-22 Recovered  FIPS_y  \\\n",
+       "0                     2                  0                     0   31109   \n",
+       "1                     5                  0                     0   46099   \n",
+       "2                     1                  0                     0   39063   \n",
+       "3                     0                  0                     0   48189   \n",
+       "4                     0                  0                     0    1027   \n",
        "\n",
-       "   2020-03-29 Recovered  FIPS_x  2020-03-30 Confirmed  2020-03-30 Deaths  \\\n",
-       "0                     0   31109                     8                  0   \n",
-       "1                     0   46099                    28                  0   \n",
-       "2                     0   39063                     3                  0   \n",
-       "3                     0   48189                     1                  0   \n",
-       "4                     0    1027                     2                  0   \n",
+       "   2020-03-23 Confirmed  2020-03-23 Deaths  2020-03-23 Recovered  FIPS_x  \\\n",
+       "0                     2                  0                     0   31109   \n",
+       "1                     5                  0                     0   46099   \n",
+       "2                     1                  0                     0   39063   \n",
+       "3                     0                  0                     0   48189   \n",
+       "4                     0                  0                     0    1027   \n",
        "\n",
-       "   2020-03-30 Recovered  FIPS_y  2020-03-31 Confirmed  2020-03-31 Deaths  \\\n",
-       "0                     0   31109                     8                  0   \n",
-       "1                     0   46099                    31                  0   \n",
-       "2                     0   39063                     5                  0   \n",
-       "3                     0   48189                     1                  0   \n",
-       "4                     0    1027                     2                  0   \n",
+       "   2020-03-24 Confirmed  2020-03-24 Deaths  2020-03-24 Recovered  FIPS_y  \\\n",
+       "0                     2                  0                     0   31109   \n",
+       "1                     5                  0                     0   46099   \n",
+       "2                     1                  0                     0   39063   \n",
+       "3                     0                  0                     0   48189   \n",
+       "4                     0                  0                     0    1027   \n",
        "\n",
-       "   2020-03-31 Recovered  \n",
-       "0                     0  \n",
-       "1                     0  \n",
-       "2                     0  \n",
-       "3                     0  \n",
-       "4                     0  \n",
+       "   2020-03-25 Confirmed  2020-03-25 Deaths  2020-03-25 Recovered  FIPS_x  \\\n",
+       "0                     3                  0                     0   31109   \n",
+       "1                    13                  0                     0   46099   \n",
+       "2                     1                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     1                  0                     0    1027   \n",
        "\n",
-       "[5 rows x 47 columns]"
+       "   2020-03-26 Confirmed  2020-03-26 Deaths  2020-03-26 Recovered  FIPS_y  \\\n",
+       "0                     3                  0                     0   31109   \n",
+       "1                    16                  0                     0   46099   \n",
+       "2                     2                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     1                  0                     0    1027   \n",
+       "\n",
+       "   2020-03-27 Confirmed  2020-03-27 Deaths  2020-03-27 Recovered  FIPS_x  \\\n",
+       "0                     3                  0                     0   31109   \n",
+       "1                    18                  0                     0   46099   \n",
+       "2                     2                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     1                  0                     0    1027   \n",
+       "\n",
+       "   2020-03-28 Confirmed  2020-03-28 Deaths  2020-03-28 Recovered  FIPS_y  \\\n",
+       "0                     4                  0                     0   31109   \n",
+       "1                    21                  0                     0   46099   \n",
+       "2                     3                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     2                  0                     0    1027   \n",
+       "\n",
+       "   2020-03-29 Confirmed  2020-03-29 Deaths  2020-03-29 Recovered  FIPS_x  \\\n",
+       "0                     4                  0                     0   31109   \n",
+       "1                    25                  0                     0   46099   \n",
+       "2                     3                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     2                  0                     0    1027   \n",
+       "\n",
+       "   2020-03-30 Confirmed  2020-03-30 Deaths  2020-03-30 Recovered  FIPS_y  \\\n",
+       "0                     8                  0                     0   31109   \n",
+       "1                    28                  0                     0   46099   \n",
+       "2                     3                  0                     0   39063   \n",
+       "3                     1                  0                     0   48189   \n",
+       "4                     2                  0                     0    1027   \n",
+       "\n",
+       "   2020-03-31 Confirmed  2020-03-31 Deaths  2020-03-31 Recovered  \n",
+       "0                     8                  0                     0  \n",
+       "1                    31                  0                     0  \n",
+       "2                     5                  0                     0  \n",
+       "3                     1                  0                     0  \n",
+       "4                     2                  0                     0  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
