--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2852,6 +2852,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert NYT data to date cases and date deaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allFIPS = list(set(gdf_countyTimeSeries[\"fips\"]))\n",
+    "dts = list(set(gdf_countyTimeSeries[\"date\"]))\n",
+    "dts.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_NYTData = {\"fips\":[]}\n",
+    "for dt in dts:\n",
+    "    columnNameBase = dt.strftime(\"%Y-%m-%d\")\n",
+    "    casesColumn = f\"{columnNameBase} Cases\"\n",
+    "    deathsColumn = f\"{columnNameBase} Deaths\"\n",
+    "    casesData = []\n",
+    "    deathsData = []\n",
+    "    dict_NYTData[casesColumn] = casesData\n",
+    "    dict_NYTData[deathsColumn] = deathsData\n",
+    "# for fips in allFIPS:\n",
+    "#     try:\n",
+    "#         relevantColumn = gdf_countyTimeSeries[(gdf_countyTimeSeries[\"fips\"]==fips) & (gdf_countyTimeSeries[\"date\"]==dt)]\n",
+    "#         cases = relevantColumn[\"cases\"]\n",
+    "#         deahts = relevantColumn[\"deaths\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fips': [],\n",
+       " '2020-01-21 Cases': [],\n",
+       " '2020-01-21 Deaths': [],\n",
+       " '2020-01-22 Cases': [],\n",
+       " '2020-01-22 Deaths': [],\n",
+       " '2020-01-23 Cases': [],\n",
+       " '2020-01-23 Deaths': [],\n",
+       " '2020-01-24 Cases': [],\n",
+       " '2020-01-24 Deaths': [],\n",
+       " '2020-01-25 Cases': [],\n",
+       " '2020-01-25 Deaths': [],\n",
+       " '2020-01-26 Cases': [],\n",
+       " '2020-01-26 Deaths': [],\n",
+       " '2020-01-27 Cases': [],\n",
+       " '2020-01-27 Deaths': [],\n",
+       " '2020-01-28 Cases': [],\n",
+       " '2020-01-28 Deaths': [],\n",
+       " '2020-01-29 Cases': [],\n",
+       " '2020-01-29 Deaths': [],\n",
+       " '2020-01-30 Cases': [],\n",
+       " '2020-01-30 Deaths': [],\n",
+       " '2020-01-31 Cases': [],\n",
+       " '2020-01-31 Deaths': [],\n",
+       " '2020-02-01 Cases': [],\n",
+       " '2020-02-01 Deaths': [],\n",
+       " '2020-02-02 Cases': [],\n",
+       " '2020-02-02 Deaths': [],\n",
+       " '2020-02-03 Cases': [],\n",
+       " '2020-02-03 Deaths': [],\n",
+       " '2020-02-04 Cases': [],\n",
+       " '2020-02-04 Deaths': [],\n",
+       " '2020-02-05 Cases': [],\n",
+       " '2020-02-05 Deaths': [],\n",
+       " '2020-02-06 Cases': [],\n",
+       " '2020-02-06 Deaths': [],\n",
+       " '2020-02-07 Cases': [],\n",
+       " '2020-02-07 Deaths': [],\n",
+       " '2020-02-08 Cases': [],\n",
+       " '2020-02-08 Deaths': [],\n",
+       " '2020-02-09 Cases': [],\n",
+       " '2020-02-09 Deaths': [],\n",
+       " '2020-02-10 Cases': [],\n",
+       " '2020-02-10 Deaths': [],\n",
+       " '2020-02-11 Cases': [],\n",
+       " '2020-02-11 Deaths': [],\n",
+       " '2020-02-12 Cases': [],\n",
+       " '2020-02-12 Deaths': [],\n",
+       " '2020-02-13 Cases': [],\n",
+       " '2020-02-13 Deaths': [],\n",
+       " '2020-02-14 Cases': [],\n",
+       " '2020-02-14 Deaths': [],\n",
+       " '2020-02-15 Cases': [],\n",
+       " '2020-02-15 Deaths': [],\n",
+       " '2020-02-16 Cases': [],\n",
+       " '2020-02-16 Deaths': [],\n",
+       " '2020-02-17 Cases': [],\n",
+       " '2020-02-17 Deaths': [],\n",
+       " '2020-02-18 Cases': [],\n",
+       " '2020-02-18 Deaths': [],\n",
+       " '2020-02-19 Cases': [],\n",
+       " '2020-02-19 Deaths': [],\n",
+       " '2020-02-20 Cases': [],\n",
+       " '2020-02-20 Deaths': [],\n",
+       " '2020-02-21 Cases': [],\n",
+       " '2020-02-21 Deaths': [],\n",
+       " '2020-02-22 Cases': [],\n",
+       " '2020-02-22 Deaths': [],\n",
+       " '2020-02-23 Cases': [],\n",
+       " '2020-02-23 Deaths': [],\n",
+       " '2020-02-24 Cases': [],\n",
+       " '2020-02-24 Deaths': [],\n",
+       " '2020-02-25 Cases': [],\n",
+       " '2020-02-25 Deaths': [],\n",
+       " '2020-02-26 Cases': [],\n",
+       " '2020-02-26 Deaths': [],\n",
+       " '2020-02-27 Cases': [],\n",
+       " '2020-02-27 Deaths': [],\n",
+       " '2020-02-28 Cases': [],\n",
+       " '2020-02-28 Deaths': [],\n",
+       " '2020-02-29 Cases': [],\n",
+       " '2020-02-29 Deaths': [],\n",
+       " '2020-03-01 Cases': [],\n",
+       " '2020-03-01 Deaths': [],\n",
+       " '2020-03-02 Cases': [],\n",
+       " '2020-03-02 Deaths': [],\n",
+       " '2020-03-03 Cases': [],\n",
+       " '2020-03-03 Deaths': [],\n",
+       " '2020-03-04 Cases': [],\n",
+       " '2020-03-04 Deaths': [],\n",
+       " '2020-03-05 Cases': [],\n",
+       " '2020-03-05 Deaths': [],\n",
+       " '2020-03-06 Cases': [],\n",
+       " '2020-03-06 Deaths': [],\n",
+       " '2020-03-07 Cases': [],\n",
+       " '2020-03-07 Deaths': [],\n",
+       " '2020-03-08 Cases': [],\n",
+       " '2020-03-08 Deaths': [],\n",
+       " '2020-03-09 Cases': [],\n",
+       " '2020-03-09 Deaths': [],\n",
+       " '2020-03-10 Cases': [],\n",
+       " '2020-03-10 Deaths': [],\n",
+       " '2020-03-11 Cases': [],\n",
+       " '2020-03-11 Deaths': [],\n",
+       " '2020-03-12 Cases': [],\n",
+       " '2020-03-12 Deaths': [],\n",
+       " '2020-03-13 Cases': [],\n",
+       " '2020-03-13 Deaths': [],\n",
+       " '2020-03-14 Cases': [],\n",
+       " '2020-03-14 Deaths': [],\n",
+       " '2020-03-15 Cases': [],\n",
+       " '2020-03-15 Deaths': [],\n",
+       " '2020-03-16 Cases': [],\n",
+       " '2020-03-16 Deaths': [],\n",
+       " '2020-03-17 Cases': [],\n",
+       " '2020-03-17 Deaths': [],\n",
+       " '2020-03-18 Cases': [],\n",
+       " '2020-03-18 Deaths': [],\n",
+       " '2020-03-19 Cases': [],\n",
+       " '2020-03-19 Deaths': [],\n",
+       " '2020-03-20 Cases': [],\n",
+       " '2020-03-20 Deaths': [],\n",
+       " '2020-03-21 Cases': [],\n",
+       " '2020-03-21 Deaths': [],\n",
+       " '2020-03-22 Cases': [],\n",
+       " '2020-03-22 Deaths': [],\n",
+       " '2020-03-23 Cases': [],\n",
+       " '2020-03-23 Deaths': [],\n",
+       " '2020-03-24 Cases': [],\n",
+       " '2020-03-24 Deaths': [],\n",
+       " '2020-03-25 Cases': [],\n",
+       " '2020-03-25 Deaths': [],\n",
+       " '2020-03-26 Cases': [],\n",
+       " '2020-03-26 Deaths': [],\n",
+       " '2020-03-27 Cases': [],\n",
+       " '2020-03-27 Deaths': [],\n",
+       " '2020-03-28 Cases': [],\n",
+       " '2020-03-28 Deaths': [],\n",
+       " '2020-03-29 Cases': [],\n",
+       " '2020-03-29 Deaths': [],\n",
+       " '2020-03-30 Cases': [],\n",
+       " '2020-03-30 Deaths': [],\n",
+       " '2020-03-31 Cases': [],\n",
+       " '2020-03-31 Deaths': []}"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_NYTData"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
