--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -2860,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2871,7 +2871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2884,13 +2884,13 @@
     "    newDeathsColumn = f\"{columnNameBase} Cases\"\n",
     "    dict_NYTData[casesColumn] = []\n",
     "    dict_NYTData[deathsColumn] = []\n",
-    "    dict_NYTData[newCasesColumn] = []\n",
-    "    dict_NYTData[newDeathsColumn] = []"
+    "    dict_NYTData[newCasesColumn] = 0\n",
+    "    dict_NYTData[newDeathsColumn] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2915,10 +2915,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['fips', '2020-01-21 Cumulative Cases', '2020-01-21 Cumulative Deaths', '2020-01-21 Cases', '2020-01-22 Cumulative Cases', '2020-01-22 Cumulative Deaths', '2020-01-22 Cases', '2020-01-23 Cumulative Cases', '2020-01-23 Cumulative Deaths', '2020-01-23 Cases', '2020-01-24 Cumulative Cases', '2020-01-24 Cumulative Deaths', '2020-01-24 Cases', '2020-01-25 Cumulative Cases', '2020-01-25 Cumulative Deaths', '2020-01-25 Cases', '2020-01-26 Cumulative Cases', '2020-01-26 Cumulative Deaths', '2020-01-26 Cases', '2020-01-27 Cumulative Cases', '2020-01-27 Cumulative Deaths', '2020-01-27 Cases', '2020-01-28 Cumulative Cases', '2020-01-28 Cumulative Deaths', '2020-01-28 Cases', '2020-01-29 Cumulative Cases', '2020-01-29 Cumulative Deaths', '2020-01-29 Cases', '2020-01-30 Cumulative Cases', '2020-01-30 Cumulative Deaths', '2020-01-30 Cases', '2020-01-31 Cumulative Cases', '2020-01-31 Cumulative Deaths', '2020-01-31 Cases', '2020-02-01 Cumulative Cases', '2020-02-01 Cumulative Deaths', '2020-02-01 Cases', '2020-02-02 Cumulative Cases', '2020-02-02 Cumulative Deaths', '2020-02-02 Cases', '2020-02-03 Cumulative Cases', '2020-02-03 Cumulative Deaths', '2020-02-03 Cases', '2020-02-04 Cumulative Cases', '2020-02-04 Cumulative Deaths', '2020-02-04 Cases', '2020-02-05 Cumulative Cases', '2020-02-05 Cumulative Deaths', '2020-02-05 Cases', '2020-02-06 Cumulative Cases', '2020-02-06 Cumulative Deaths', '2020-02-06 Cases', '2020-02-07 Cumulative Cases', '2020-02-07 Cumulative Deaths', '2020-02-07 Cases', '2020-02-08 Cumulative Cases', '2020-02-08 Cumulative Deaths', '2020-02-08 Cases', '2020-02-09 Cumulative Cases', '2020-02-09 Cumulative Deaths', '2020-02-09 Cases', '2020-02-10 Cumulative Cases', '2020-02-10 Cumulative Deaths', '2020-02-10 Cases', '2020-02-11 Cumulative Cases', '2020-02-11 Cumulative Deaths', '2020-02-11 Cases', '2020-02-12 Cumulative Cases', '2020-02-12 Cumulative Deaths', '2020-02-12 Cases', '2020-02-13 Cumulative Cases', '2020-02-13 Cumulative Deaths', '2020-02-13 Cases', '2020-02-14 Cumulative Cases', '2020-02-14 Cumulative Deaths', '2020-02-14 Cases', '2020-02-15 Cumulative Cases', '2020-02-15 Cumulative Deaths', '2020-02-15 Cases', '2020-02-16 Cumulative Cases', '2020-02-16 Cumulative Deaths', '2020-02-16 Cases', '2020-02-17 Cumulative Cases', '2020-02-17 Cumulative Deaths', '2020-02-17 Cases', '2020-02-18 Cumulative Cases', '2020-02-18 Cumulative Deaths', '2020-02-18 Cases', '2020-02-19 Cumulative Cases', '2020-02-19 Cumulative Deaths', '2020-02-19 Cases', '2020-02-20 Cumulative Cases', '2020-02-20 Cumulative Deaths', '2020-02-20 Cases', '2020-02-21 Cumulative Cases', '2020-02-21 Cumulative Deaths', '2020-02-21 Cases', '2020-02-22 Cumulative Cases', '2020-02-22 Cumulative Deaths', '2020-02-22 Cases', '2020-02-23 Cumulative Cases', '2020-02-23 Cumulative Deaths', '2020-02-23 Cases', '2020-02-24 Cumulative Cases', '2020-02-24 Cumulative Deaths', '2020-02-24 Cases', '2020-02-25 Cumulative Cases', '2020-02-25 Cumulative Deaths', '2020-02-25 Cases', '2020-02-26 Cumulative Cases', '2020-02-26 Cumulative Deaths', '2020-02-26 Cases', '2020-02-27 Cumulative Cases', '2020-02-27 Cumulative Deaths', '2020-02-27 Cases', '2020-02-28 Cumulative Cases', '2020-02-28 Cumulative Deaths', '2020-02-28 Cases', '2020-02-29 Cumulative Cases', '2020-02-29 Cumulative Deaths', '2020-02-29 Cases', '2020-03-01 Cumulative Cases', '2020-03-01 Cumulative Deaths', '2020-03-01 Cases', '2020-03-02 Cumulative Cases', '2020-03-02 Cumulative Deaths', '2020-03-02 Cases', '2020-03-03 Cumulative Cases', '2020-03-03 Cumulative Deaths', '2020-03-03 Cases', '2020-03-04 Cumulative Cases', '2020-03-04 Cumulative Deaths', '2020-03-04 Cases', '2020-03-05 Cumulative Cases', '2020-03-05 Cumulative Deaths', '2020-03-05 Cases', '2020-03-06 Cumulative Cases', '2020-03-06 Cumulative Deaths', '2020-03-06 Cases', '2020-03-07 Cumulative Cases', '2020-03-07 Cumulative Deaths', '2020-03-07 Cases', '2020-03-08 Cumulative Cases', '2020-03-08 Cumulative Deaths', '2020-03-08 Cases', '2020-03-09 Cumulative Cases', '2020-03-09 Cumulative Deaths', '2020-03-09 Cases', '2020-03-10 Cumulative Cases', '2020-03-10 Cumulative Deaths', '2020-03-10 Cases', '2020-03-11 Cumulative Cases', '2020-03-11 Cumulative Deaths', '2020-03-11 Cases', '2020-03-12 Cumulative Cases', '2020-03-12 Cumulative Deaths', '2020-03-12 Cases', '2020-03-13 Cumulative Cases', '2020-03-13 Cumulative Deaths', '2020-03-13 Cases', '2020-03-14 Cumulative Cases', '2020-03-14 Cumulative Deaths', '2020-03-14 Cases', '2020-03-15 Cumulative Cases', '2020-03-15 Cumulative Deaths', '2020-03-15 Cases', '2020-03-16 Cumulative Cases', '2020-03-16 Cumulative Deaths', '2020-03-16 Cases', '2020-03-17 Cumulative Cases', '2020-03-17 Cumulative Deaths', '2020-03-17 Cases', '2020-03-18 Cumulative Cases', '2020-03-18 Cumulative Deaths', '2020-03-18 Cases', '2020-03-19 Cumulative Cases', '2020-03-19 Cumulative Deaths', '2020-03-19 Cases', '2020-03-20 Cumulative Cases', '2020-03-20 Cumulative Deaths', '2020-03-20 Cases', '2020-03-21 Cumulative Cases', '2020-03-21 Cumulative Deaths', '2020-03-21 Cases', '2020-03-22 Cumulative Cases', '2020-03-22 Cumulative Deaths', '2020-03-22 Cases', '2020-03-23 Cumulative Cases', '2020-03-23 Cumulative Deaths', '2020-03-23 Cases', '2020-03-24 Cumulative Cases', '2020-03-24 Cumulative Deaths', '2020-03-24 Cases', '2020-03-25 Cumulative Cases', '2020-03-25 Cumulative Deaths', '2020-03-25 Cases', '2020-03-26 Cumulative Cases', '2020-03-26 Cumulative Deaths', '2020-03-26 Cases', '2020-03-27 Cumulative Cases', '2020-03-27 Cumulative Deaths', '2020-03-27 Cases', '2020-03-28 Cumulative Cases', '2020-03-28 Cumulative Deaths', '2020-03-28 Cases', '2020-03-29 Cumulative Cases', '2020-03-29 Cumulative Deaths', '2020-03-29 Cases', '2020-03-30 Cumulative Cases', '2020-03-30 Cumulative Deaths', '2020-03-30 Cases', '2020-03-31 Cumulative Cases', '2020-03-31 Cumulative Deaths', '2020-03-31 Cases'])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "dict_NYTData.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "arrays must all be same length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-59-e21d2a8379b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdict_NYTData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnewCasesColumn\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdict_NYTData\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnewDeathsColumn\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdf_NYTData\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdict_NYTData\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    433\u001b[0m             )\n\u001b[0;32m    434\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 435\u001b[1;33m             \u001b[0mmgr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    436\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    437\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[1;34m(data, index, columns, dtype)\u001b[0m\n\u001b[0;32m    252\u001b[0m             \u001b[0marr\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    253\u001b[0m         ]\n\u001b[1;32m--> 254\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    255\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    256\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[1;31m# figure out the index, if necessary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\envs\\phd\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36mextract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    363\u001b[0m             \u001b[0mlengths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_lengths\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    364\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 365\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"arrays must all be same length\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    366\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    367\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mhave_dicts\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: arrays must all be same length"
+     ]
+    }
+   ],
+   "source": [
+    "dict_NYTData[newCasesColumn] = 0\n",
+    "dict_NYTData[newDeathsColumn] = 0\n",
     "df_NYTData = pd.DataFrame(dict_NYTData)"
    ]
   },
